Footer fixed. Adding subjects select field centered (could not left-align it at the moment).

--- a/Teachers_Pet/www/css/entryPageStyle.css
+++ b/Teachers_Pet/www/css/entryPageStyle.css
@@ -132,7 +132,7 @@ div.slider{
 span.slider-pager-page {
 	height: 100%;
 	width: 100%;
-	color: white;
+	color: black;
 }
 
 span.slider-pager-page.active{
